<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <!-- Bla Bla Bla i.e. Your Textviews/Buttons etc. -->

        <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/amatic_bold"
        android:text="Profile"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="125dp"
        android:fontFamily="@font/amatic"
        android:text="Full Name"
        android:textSize="22dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="208dp"
        android:layout_height="53dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="110dp"
        android:ems="10"
        android:fontFamily="@font/europe_underground_light"
        android:scrollbarSize="4dp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/amatic"
        android:text="Email"
        android:textSize="22dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="208dp"
        android:layout_height="53dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="185dp"
        android:ems="10"
        android:fontFamily="@font/europe_underground_light"
        android:scrollbarSize="4dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="275dp"
        android:fontFamily="@font/amatic"
        android:text="Gender"
        android:textSize="22dp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/genderOptions"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="275dp"
        android:background="@color/light_brown">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Male"
            android:fontFamily="@font/amatic_regular"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:fontFamily="@font/amatic_regular"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Not  Listed"
            android:fontFamily="@font/amatic_regular"
            android:textSize="22sp"
            android:textStyle="bold"/>

    </RadioGroup>


    <Button
        android:id="@+id/update_profile"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/blue_round_button"
        android:enabled="true"
        android:fontFamily="@font/amatic_regular"
        android:onClick="updateProfile"
        android:text="Update Profile"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold" />

        <Button
            android:id="@+id/change_password"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="400dp"
            android:background="@drawable/green_round_button"
            android:enabled="true"
            android:fontFamily="@font/amatic_regular"
            android:text="Change Password"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>