...
            android:text="|"
            android:textColor="@color/white"
            android:textSize="100dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/merchant_orders_placed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="245dp"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/amatic_bold"
            android:text="15"
...
